[package]
name = "pachinko"
description = "Physical item tracker and sorter"
version = "0.5.0"

repository = "https://github.com/pianohacker/qualia"
authors = ["Jesse Weaver <pianohacker@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
qualia = "0.7"
anyhow = "1.0" # Flexible concrete Error type built on std::error::Error
clap = "3.0.0-beta.2"
dirs = "1.0"
rustyline = "7.0" # Rustyline, a readline implementation based on Antirez's Linenoise
regex = "1.4" # An implementation of regular expressions for Rust. This implementation uses finite automata and gua…
shell-words = "1.0.0" # Process command line according to parsing rules of UNIX shell

[dev-dependencies]
assert_cmd = "1.0" # Test CLI Applications.
predicates = "1.0"
rexpect = "0.4"
tempfile = "3.1" # A library for managing a temporary directory and deleting all contents when it's dropped.

[workspace]
members = ["."]
