[package]
name = "pachinko"
description = "Physical item tracker and sorter"
version = "0.7.0"

repository = "https://github.com/pianohacker/qualia"
authors = ["Jesse Weaver <pianohacker@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
qualia = "0.15"
anyhow = "1.0" # Flexible concrete Error type built on std::error::Error
clap = "3.0.0-beta.2"
dirs = "1.0"
rustyline = "10.0.0"
regex = "1.4" # An implementation of regular expressions for Rust. This implementation uses finite automata and gua…
serde = "1.0" # A generic serialization/deserialization framework
serde_json = "1.0" # A JSON serialization file format
shell-words = "1.0" # Process command line according to parsing rules of UNIX shell
tui = "0.17.0"
# crossterm = { path = "../crossterm" }
crossterm = "0.26.1"
# We do _not_ want the "termination" feature of ctrlc. Crossterm's polling works badly with it.
# ctrlc = { version = "3.2.1", features = ["termination"] }
ctrlc = "3.2.1"
unicode-width = "0.1.9"
fuzzy-matcher = "0.3.7"
indexmap = "1.9.2"
unicode-segmentation = "1.10.1"
git-version = "0.3.5"
nix = "0.26.2"

[dev-dependencies]
assert_cmd = "1.0" # Test CLI Applications.
predicates = "1.0"
rexpect = "0.4"
tempfile = "3.1" # A library for managing a temporary directory and deleting all contents when it's dropped.

[workspace]
members = ["."]
